# clynnai-backend

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
clynnai_backend/: __main__.py  config.py  main.py
clynnai_backend/agent/: __init__.py  llm.py  prompts.py  runtime.py  schema.py
clynnai_backend/agent/tools/: __init__.py  base.py  firecrawl.py  image_generation.py  phone_action.py
data/: provider-config.example.json
spikes/001-langgraph-feasibility/: main.py
tests/: test_agent_core.py  test_app.py  test_config.py  test_provider_config_and_edit.py  test_session_and_phone_actions.py
