[project]
name = "clynnai-backend"
version = "0.1.0"
description = "ClynnAI portable backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4",
  "langgraph==1.2.4"
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
